es-k8s-mon/manifests/monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mon-ingress
  namespace: monitoring
spec:
  rules:
    - host: mon-es.IP_PLACEHOLDER.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mon-es-svc
                port:
                  number: 9200
    - host: mon-kb.IP_PLACEHOLDER.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mon-kb-svc
                port:
                  number: 5601
